@@ -15,6 +15,7 @@
  */
 package io.fabric8.service.child;
 
+import static io.fabric8.utils.Ports.mapPortToRange;
 import io.fabric8.api.Constants;
 import io.fabric8.api.Container;
 import io.fabric8.api.ContainerAutoScaler;
@@ -25,18 +26,29 @@ import io.fabric8.api.CreateChildContainerOptions;
 import io.fabric8.api.CreateEnsembleOptions;
 import io.fabric8.api.CreationStateListener;
 import io.fabric8.api.DataStore;
+import io.fabric8.api.FabricRequirements;
 import io.fabric8.api.FabricService;
 import io.fabric8.api.PortService;
 import io.fabric8.api.Profile;
+import io.fabric8.api.ProfileRequirements;
+import io.fabric8.api.ProfileService;
+import io.fabric8.api.Profiles;
+import io.fabric8.api.ZkDefs;
 import io.fabric8.api.jcip.ThreadSafe;
 import io.fabric8.api.scr.AbstractComponent;
 import io.fabric8.api.scr.ValidatingReference;
+import io.fabric8.common.util.Strings;
 import io.fabric8.internal.ContainerImpl;
-import io.fabric8.internal.ProfileOverlayImpl;
+import io.fabric8.internal.Objects;
 import io.fabric8.service.ContainerTemplate;
 import io.fabric8.utils.AuthenticationUtils;
 import io.fabric8.utils.Ports;
-import io.fabric8.zookeeper.ZkDefs;
+
+import java.util.Collection;
+import java.util.LinkedHashSet;
+import java.util.Map;
+import java.util.Set;
+
 import org.apache.felix.scr.annotations.Activate;
 import org.apache.felix.scr.annotations.Component;
 import org.apache.felix.scr.annotations.Deactivate;
@@ -50,17 +62,9 @@ import org.apache.karaf.admin.management.AdminServiceMBean;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.LinkedHashSet;
-import java.util.Map;
-import java.util.Set;
-
-import static io.fabric8.utils.Ports.mapPortToRange;
-
 @ThreadSafe
 @Component(name = "io.fabric8.container.provider.child", label = "Fabric8 Child Container Provider", immediate = true, metatype = false)
-@Service(ContainerProvider.class)
+@Service({ ContainerProvider.class, ChildContainerProvider.class })
 @Properties(
         @Property(name = "fabric.container.protocol", value = ChildContainerProvider.SCHEME)
 )
@@ -70,11 +74,10 @@ public final class ChildContainerProvider extends AbstractComponent implements C
     static final String SCHEME = "child";
 
     @Reference(referenceInterface = FabricService.class)
-    private final ValidatingReference<FabricService> fabricService = new ValidatingReference<FabricService>();
-
-    @Reference(referenceInterface = ProcessControllerFactory.class, cardinality = ReferenceCardinality.OPTIONAL_UNARY,
-            policy = ReferencePolicy.DYNAMIC, bind = "bindProcessControllerFactory", unbind = "unbindProcessControllerFactory")
-    private ProcessControllerFactory processControllerFactory;
+    private final ValidatingReference<FabricService> fabricService = new ValidatingReference<>();
+    // [TODO] #1916 Migrate process-manager to SCR
+    @Reference(referenceInterface = ProcessControllerFactory.class, cardinality = ReferenceCardinality.OPTIONAL_UNARY, policy = ReferencePolicy.DYNAMIC, bind = "bindProcessControllerFactory", unbind = "unbindProcessControllerFactory")
+    private final ValidatingReference<ProcessControllerFactory> processControllerFactory = new ValidatingReference<>();
 
     @Activate
     void activate() {
@@ -89,29 +92,32 @@ public final class ChildContainerProvider extends AbstractComponent implements C
 
     @Override
     public CreateChildContainerOptions.Builder newBuilder() {
+        assertValid();
         return CreateChildContainerOptions.builder();
     }
 
     @Override
     public CreateChildContainerMetadata create(final CreateChildContainerOptions options, final CreationStateListener listener) throws Exception {
         assertValid();
-
         ChildContainerController controller = createController(options);
         return controller.create(options, listener);
     }
 
     @Override
     public void start(final Container container) {
+        assertValid();
         getContainerController(container).start(container);
     }
 
     @Override
     public void stop(final Container container) {
+        assertValid();
         getContainerController(container).stop(container);
     }
 
     @Override
     public void destroy(final Container container) {
+        assertValid();
         getContainerController(container).destroy(container);
     }
 
@@ -122,24 +128,43 @@ public final class ChildContainerProvider extends AbstractComponent implements C
 
     @Override
     public Class<CreateChildContainerOptions> getOptionsType() {
+        assertValid();
         return CreateChildContainerOptions.class;
     }
 
     @Override
     public Class<CreateChildContainerMetadata> getMetadataType() {
+        assertValid();
         return CreateChildContainerMetadata.class;
     }
 
     @Override
-    public ContainerAutoScaler createAutoScaler() {
+    public boolean isValidProvider() {
+        // child provider isn't valid in OpenShift environment
+        FabricService service = getFabricService();
+        if (service != null) {
+            // lets disable child if in docker or openshift environments
+            String environment = service.getEnvironment();
+            if (Objects.equal(environment, "docker") || Objects.equal(environment, "openshift") || Objects.equal(environment, "kubernetes")) {
+                return false;
+            }
+        }
+        boolean openshiftFuseEnv = Strings.notEmpty(System.getenv("OPENSHIFT_FUSE_DIR"));
+        boolean openshiftAmqEnv = Strings.notEmpty(System.getenv("OPENSHIFT_AMQ_DIR"));
+        return !(openshiftFuseEnv || openshiftAmqEnv);
+    }
+
+    @Override
+    public ContainerAutoScaler createAutoScaler(FabricRequirements requirements, ProfileRequirements profileRequirements) {
+        assertValid();
         return new ChildAutoScaler(this);
     }
 
-    protected ChildContainerController createController(CreateChildContainerOptions options) throws Exception {
+    private ChildContainerController createController(CreateChildContainerOptions options) throws Exception {
         ChildContainerController answer = null;
         boolean isJavaContainer = ChildContainers.isJavaContainer(getFabricService(), options);
         boolean isProcessContainer = ChildContainers.isProcessContainer(getFabricService(), options);
-        ProcessControllerFactory factory = processControllerFactory;
+        ProcessControllerFactory factory = processControllerFactory.getOptional();
         if (factory != null) {
             answer = factory.createController(options);
         } else if (isJavaContainer || isProcessContainer) {
@@ -152,11 +177,11 @@ public final class ChildContainerProvider extends AbstractComponent implements C
         return answer;
     }
 
-    protected ChildContainerController getContainerController(Container container) {
+    private ChildContainerController getContainerController(Container container) {
         assertValid();
         ChildContainerController answer = null;
         try {
-            ProcessControllerFactory factory = processControllerFactory;
+            ProcessControllerFactory factory = processControllerFactory.getOptional();
             if (factory != null) {
                 answer = factory.getControllerForContainer(container);
             }
@@ -171,7 +196,7 @@ public final class ChildContainerProvider extends AbstractComponent implements C
         return answer;
     }
 
-    protected ChildContainerController createKarafContainerController() {
+    private ChildContainerController createKarafContainerController() {
         return new ChildContainerController() {
             @Override
             public CreateChildContainerMetadata create(final CreateChildContainerOptions options, final CreationStateListener listener) {
@@ -200,6 +225,7 @@ public final class ChildContainerProvider extends AbstractComponent implements C
                 getContainerTemplateForChild(container).execute(new ContainerTemplate.AdminServiceCallback<Object>() {
                     public Object doWithAdminService(AdminServiceMBean adminService) throws Exception {
                         adminService.stopInstance(container.getId());
+                        container.setProvisionResult(Container.PROVISION_STOPPED);
                         return null;
                     }
                 });
@@ -225,13 +251,17 @@ public final class ChildContainerProvider extends AbstractComponent implements C
         StringBuilder jvmOptsBuilder = new StringBuilder();
 
         String zkPasswordEncode = System.getProperty("zookeeper.password.encode", "true");
-        jvmOptsBuilder.append("-server -Dcom.sun.management.jmxremote")
+        jvmOptsBuilder.append("-server -Dcom.sun.management.jmxremote -Dorg.jboss.gravia.repository.storage.dir=data/repository")
                 .append(options.getZookeeperUrl() != null ? " -Dzookeeper.url=\"" + options.getZookeeperUrl() + "\"" : "")
                 .append(zkPasswordEncode != null ? " -Dzookeeper.password.encode=\"" + zkPasswordEncode + "\"" : "")
                 .append(options.getZookeeperPassword() != null ? " -Dzookeeper.password=\"" + options.getZookeeperPassword() + "\"" : "");
 
+
         if (options.getJvmOpts() == null || !options.getJvmOpts().contains("-Xmx")) {
             jvmOptsBuilder.append(" -Xmx512m");
+        }
+        if (options.getJvmOpts() == null || !options.getJvmOpts().contains("-XX:MaxPermSize=")) {
+            jvmOptsBuilder.append(" -XX:MaxPermSize=256m");
         }
         if (options.isEnsembleServer()) {
             jvmOptsBuilder.append(" ").append(CreateEnsembleOptions.ENSEMBLE_AUTOSTART + "=true");
@@ -257,27 +287,25 @@ public final class ChildContainerProvider extends AbstractComponent implements C
             jvmOptsBuilder.append(" -D" + ZkDefs.MANUAL_IP + "=" + options.getManualIp());
         }
 
-        FabricService fservice = fabricService.get();
-        Map<String, String> dataStoreProperties = new HashMap<String, String>(options.getDataStoreProperties());
-        dataStoreProperties.put(DataStore.DATASTORE_TYPE_PROPERTY, fservice.getDataStore().getType());
+        DataStore dataStore = fabricService.get().adapt(DataStore.class);
+        ProfileService profileService = fabricService.get().adapt(ProfileService.class);
 
         for (Map.Entry<String, String> dataStoreEntries : options.getDataStoreProperties().entrySet()) {
             String key = dataStoreEntries.getKey();
             String value = dataStoreEntries.getValue();
-            jvmOptsBuilder.append(" -D" + Constants.DATASTORE_TYPE_PID + "." + key + "=" + value);
+            jvmOptsBuilder.append(" -D" + Constants.DATASTORE_PID + "." + key + "=" + value);
         }
 
-        Profile profile = parent.getVersion().getProfile("default");
-        Profile defaultProfile = new ProfileOverlayImpl(profile, fservice.getEnvironment(), true, fservice);
-        String featuresUrls = collectionAsString(defaultProfile.getRepositories());
+        Profile profile = parent.getVersion().getRequiredProfile("default");
+        Profile effectiveProfile = Profiles.getEffectiveProfile(fabricService.get(), profileService.getOverlayProfile(profile));
+        String featuresUrls = collectionAsString(effectiveProfile.getRepositories());
         Set<String> features = new LinkedHashSet<String>();
 
-        features.add("fabric-agent");
-        features.add("fabric-git");
+        features.add("fabric-core");
         //features.addAll(defaultProfile.getFeatures());
         String containerName = options.getName();
 
-        PortService portService = fservice.getPortService();
+        PortService portService = fabricService.get().getPortService();
         Set<Integer> usedPorts = portService.findUsedPortByHost(parent);
 
         CreateChildContainerMetadata metadata = new CreateChildContainerMetadata();
@@ -287,12 +315,12 @@ public final class ChildContainerProvider extends AbstractComponent implements C
         int minimumPort = parent.getMinimumPort();
         int maximumPort = parent.getMaximumPort();
 
-        fservice.getDataStore().setContainerAttribute(containerName, DataStore.ContainerAttribute.PortMin, String.valueOf(minimumPort));
-        fservice.getDataStore().setContainerAttribute(containerName, DataStore.ContainerAttribute.PortMax, String.valueOf(maximumPort));
-        inheritAddresses(fservice, parent.getId(), containerName, options);
+        dataStore.setContainerAttribute(containerName, DataStore.ContainerAttribute.PortMin, String.valueOf(minimumPort));
+        dataStore.setContainerAttribute(containerName, DataStore.ContainerAttribute.PortMax, String.valueOf(maximumPort));
+        inheritAddresses(fabricService.get(), parent.getId(), containerName, options);
 
         //We are creating a container instance, just for the needs of port registration.
-        Container child = new ContainerImpl(parent, containerName, fservice) {
+        Container child = new ContainerImpl(parent, containerName, fabricService.get()) {
             @Override
             public String getIp() {
                 return parent.getIp();
@@ -348,31 +376,32 @@ public final class ChildContainerProvider extends AbstractComponent implements C
     /**
      * Links child container resolver and addresses to its parents resolver and addresses.
      */
-    private void inheritAddresses(FabricService service, String parent, String name, CreateChildContainerOptions options) throws Exception {
+    private void inheritAddresses(FabricService fabricService, String parent, String name, CreateChildContainerOptions options) throws Exception {
+        DataStore dataStore = fabricService.adapt(DataStore.class);
         if (options.getManualIp() != null) {
-            service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.ManualIp, options.getManualIp());
+            dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.ManualIp, options.getManualIp());
         } else {
-            service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.ManualIp, "${zk:" + parent + "/manualip}");
+            dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.ManualIp, "${zk:" + parent + "/manualip}");
         }
 
         //Link to the addresses from the parent container.
-        service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.LocalHostName, "${zk:" + parent + "/localhostname}");
-        service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.LocalIp, "${zk:" + parent + "/localip}");
-        service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.PublicIp, "${zk:" + parent + "/publicip}");
+        dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.LocalHostName, "${zk:" + parent + "/localhostname}");
+        dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.LocalIp, "${zk:" + parent + "/localip}");
+        dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.PublicIp, "${zk:" + parent + "/publicip}");
 
         if (options.getResolver() != null) {
-            service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.Resolver, options.getResolver());
+            dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.Resolver, options.getResolver());
         } else {
-            service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.Resolver, "${zk:" + parent + "/resolver}");
+            dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.Resolver, "${zk:" + parent + "/resolver}");
         }
 
         if (options.getBindAddress() != null) {
-            service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.BindAddress, options.getBindAddress());
+            dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.BindAddress, options.getBindAddress());
         } else {
-            service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.BindAddress, "${zk:" + parent + "/bindaddress}");
+            dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.BindAddress, "${zk:" + parent + "/bindaddress}");
         }
 
-        service.getDataStore().setContainerAttribute(name, DataStore.ContainerAttribute.Ip, "${zk:" + name + "/${zk:" + name + "/resolver}}");
+        dataStore.setContainerAttribute(name, DataStore.ContainerAttribute.Ip, "${zk:" + name + "/${zk:" + name + "/resolver}}");
     }
 
     FabricService getFabricService() {
@@ -395,20 +424,20 @@ public final class ChildContainerProvider extends AbstractComponent implements C
         return sb.toString();
     }
 
-    void bindFabricService(FabricService fabricService) {
-        this.fabricService.bind(fabricService);
+    void bindFabricService(FabricService service) {
+        fabricService.bind(service);
     }
 
-    void unbindFabricService(FabricService fabricService) {
-        this.fabricService.unbind(fabricService);
+    void unbindFabricService(FabricService service) {
+        fabricService.unbind(service);
     }
 
 
-    void bindProcessControllerFactory(ProcessControllerFactory processControllerFactory) {
-        this.processControllerFactory = processControllerFactory;
+    void bindProcessControllerFactory(ProcessControllerFactory service) {
+        processControllerFactory.bind(service);
     }
 
-    void unbindProcessControllerFactory(ProcessControllerFactory processControllerFactory) {
-        this.processControllerFactory = null;
+    void unbindProcessControllerFactory(ProcessControllerFactory service) {
+        processControllerFactory.unbind(service);
     }
 }
